// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`generate entities generate for scalars 1`] = `
"
export type JSONPrimitive = string | number | boolean | null
export type JSONValue = JSONPrimitive | JSONObject | JSONArray
export type JSONObject = { readonly [K in string]?: JSONValue }
export type JSONArray = readonly JSONValue[]

export type Foo <OverRelation extends string | never = never> = {
\tname: 'Foo'
\tunique:
\t\t| Omit<{ id: string}, OverRelation>
\tcolumns: {
\t\tid: string
\t\tstringCol: string | null
\t\tintCol: number | null
\t\tdoubleCol: number | null
\t\tdateCol: string | null
\t\tdatetimeCol: string | null
\t\tbooleanCol: boolean | null
\t\tjsonCol: JSONValue | null
\t\tuuidCol: string | null
\t}
\thasOne: {
\t}
\thasMany: {
\t}
\thasManyBy: {
\t}
}

export type ContemberClientEntities = {
\tFoo: Foo
}

export type ContemberClientSchema = {
\tentities: ContemberClientEntities
}
"
`;

exports[`generate entities generate for has enum 1`] = `
"import type { FooEnumCol } from './enums'

export type JSONPrimitive = string | number | boolean | null
export type JSONValue = JSONPrimitive | JSONObject | JSONArray
export type JSONObject = { readonly [K in string]?: JSONValue }
export type JSONArray = readonly JSONValue[]

export type Foo <OverRelation extends string | never = never> = {
\tname: 'Foo'
\tunique:
\t\t| Omit<{ id: string}, OverRelation>
\tcolumns: {
\t\tid: string
\t\tenumCol: FooEnumCol | null
\t}
\thasOne: {
\t}
\thasMany: {
\t}
\thasManyBy: {
\t}
}

export type ContemberClientEntities = {
\tFoo: Foo
}

export type ContemberClientSchema = {
\tentities: ContemberClientEntities
}
"
`;

exports[`generate entities generate one has one 1`] = `
"
export type JSONPrimitive = string | number | boolean | null
export type JSONValue = JSONPrimitive | JSONObject | JSONArray
export type JSONObject = { readonly [K in string]?: JSONValue }
export type JSONArray = readonly JSONValue[]

export type Foo <OverRelation extends string | never = never> = {
\tname: 'Foo'
\tunique:
\t\t| Omit<{ id: string}, OverRelation>
\t\t| Omit<{ oneHasOneInverseRel: Bar['unique']}, OverRelation>
\tcolumns: {
\t\tid: string
\t}
\thasOne: {
\t\toneHasOneInverseRel: Bar
\t}
\thasMany: {
\t}
\thasManyBy: {
\t}
}
export type Bar <OverRelation extends string | never = never> = {
\tname: 'Bar'
\tunique:
\t\t| Omit<{ id: string}, OverRelation>
\t\t| Omit<{ oneHasOneOwningRel: Foo['unique']}, OverRelation>
\tcolumns: {
\t\tid: string
\t}
\thasOne: {
\t\toneHasOneOwningRel: Foo
\t}
\thasMany: {
\t}
\thasManyBy: {
\t}
}

export type ContemberClientEntities = {
\tFoo: Foo
\tBar: Bar
}

export type ContemberClientSchema = {
\tentities: ContemberClientEntities
}
"
`;

exports[`generate entities generate one has many 1`] = `
"
export type JSONPrimitive = string | number | boolean | null
export type JSONValue = JSONPrimitive | JSONObject | JSONArray
export type JSONObject = { readonly [K in string]?: JSONValue }
export type JSONArray = readonly JSONValue[]

export type Foo <OverRelation extends string | never = never> = {
\tname: 'Foo'
\tunique:
\t\t| Omit<{ id: string}, OverRelation>
\t\t| Omit<{ oneHasManyRel: Bar['unique']}, OverRelation>
\tcolumns: {
\t\tid: string
\t}
\thasOne: {
\t}
\thasMany: {
\t\toneHasManyRel: Bar<'manyHasOneRel'>
\t}
\thasManyBy: {
\t}
}
export type Bar <OverRelation extends string | never = never> = {
\tname: 'Bar'
\tunique:
\t\t| Omit<{ id: string}, OverRelation>
\tcolumns: {
\t\tid: string
\t}
\thasOne: {
\t\tmanyHasOneRel: Foo
\t}
\thasMany: {
\t}
\thasManyBy: {
\t}
}

export type ContemberClientEntities = {
\tFoo: Foo
\tBar: Bar
}

export type ContemberClientSchema = {
\tentities: ContemberClientEntities
}
"
`;

exports[`generate entities generate many has many 1`] = `
"
export type JSONPrimitive = string | number | boolean | null
export type JSONValue = JSONPrimitive | JSONObject | JSONArray
export type JSONObject = { readonly [K in string]?: JSONValue }
export type JSONArray = readonly JSONValue[]

export type Foo <OverRelation extends string | never = never> = {
\tname: 'Foo'
\tunique:
\t\t| Omit<{ id: string}, OverRelation>
\tcolumns: {
\t\tid: string
\t}
\thasOne: {
\t}
\thasMany: {
\t\tmanyHasManyRel: Bar
\t}
\thasManyBy: {
\t}
}
export type Bar <OverRelation extends string | never = never> = {
\tname: 'Bar'
\tunique:
\t\t| Omit<{ id: string}, OverRelation>
\tcolumns: {
\t\tid: string
\t}
\thasOne: {
\t}
\thasMany: {
\t\tmanyHasManyInverseRel: Foo
\t}
\thasManyBy: {
\t}
}

export type ContemberClientEntities = {
\tFoo: Foo
\tBar: Bar
}

export type ContemberClientSchema = {
\tentities: ContemberClientEntities
}
"
`;

exports[`generate entities generate reduced has by 1`] = `
"
export type JSONPrimitive = string | number | boolean | null
export type JSONValue = JSONPrimitive | JSONObject | JSONArray
export type JSONObject = { readonly [K in string]?: JSONValue }
export type JSONArray = readonly JSONValue[]

export type Foo <OverRelation extends string | never = never> = {
\tname: 'Foo'
\tunique:
\t\t| Omit<{ id: string}, OverRelation>
\t\t| Omit<{ locales: FooLocale['unique']}, OverRelation>
\tcolumns: {
\t\tid: string
\t}
\thasOne: {
\t}
\thasMany: {
\t\tlocales: FooLocale<'foo'>
\t}
\thasManyBy: {
\t\tlocalesByLocale: { entity: FooLocale; by: {locale: string}  }
\t}
}
export type FooLocale <OverRelation extends string | never = never> = {
\tname: 'FooLocale'
\tunique:
\t\t| Omit<{ id: string}, OverRelation>
\t\t| Omit<{ locale: string, foo: Foo['unique']}, OverRelation>
\tcolumns: {
\t\tid: string
\t\tlocale: string
\t}
\thasOne: {
\t\tfoo: Foo
\t}
\thasMany: {
\t}
\thasManyBy: {
\t}
}

export type ContemberClientEntities = {
\tFoo: Foo
\tFooLocale: FooLocale
}

export type ContemberClientSchema = {
\tentities: ContemberClientEntities
}
"
`;

exports[`generate entities generate for scalars with deprecated 1`] = `
"
export type JSONPrimitive = string | number | boolean | null
export type JSONValue = JSONPrimitive | JSONObject | JSONArray
export type JSONObject = { readonly [K in string]?: JSONValue }
export type JSONArray = readonly JSONValue[]

export type Foo <OverRelation extends string | never = never> = {
	name: 'Foo'
	unique:
		| Omit<{ id: string}, OverRelation>
	columns: {
		id: string
		stringCol: string | null
		intCol: number | null
		doubleCol: number | null
		dateCol: string | null
		datetimeCol: string | null
		booleanCol: boolean | null
		jsonCol: JSONValue | null
		uuidCol: string | null
		deprecatedStringCol: string | null
		deprecatedIntCol: number | null
		deprecatedDoubleCol: number | null
		deprecatedDateCol: string | null
		deprecatedDatetimeCol: string | null
		deprecatedBooleanCol: boolean | null
		deprecatedJsonCol: JSONValue | null
		deprecatedUuidCol: string | null
	}
	hasOne: {
	}
	hasMany: {
	}
	hasManyBy: {
	}
}

export type ContemberClientEntities = {
	Foo: Foo
}

export type ContemberClientSchema = {
	entities: ContemberClientEntities
}
"
`;

exports[`generate entities generate for has enum deprecated 1`] = `
"import type { FooEnumCol } from './enums'
import type { FooDeprecatedEnumCol } from './enums'
import type { DeprecatedFooEnumCol } from './enums'
import type { DeprecatedFooDeprecatedEnumCol } from './enums'

export type JSONPrimitive = string | number | boolean | null
export type JSONValue = JSONPrimitive | JSONObject | JSONArray
export type JSONObject = { readonly [K in string]?: JSONValue }
export type JSONArray = readonly JSONValue[]

export type Foo <OverRelation extends string | never = never> = {
	name: 'Foo'
	unique:
		| Omit<{ id: string}, OverRelation>
	columns: {
		id: string
		enumCol: FooEnumCol | null
		deprecatedEnumCol: FooDeprecatedEnumCol | null
	}
	hasOne: {
	}
	hasMany: {
	}
	hasManyBy: {
	}
}
export type DeprecatedFoo <OverRelation extends string | never = never> = {
	name: 'DeprecatedFoo'
	unique:
		| Omit<{ id: string}, OverRelation>
	columns: {
		id: string
		enumCol: DeprecatedFooEnumCol | null
		deprecatedEnumCol: DeprecatedFooDeprecatedEnumCol | null
	}
	hasOne: {
	}
	hasMany: {
	}
	hasManyBy: {
	}
}

export type ContemberClientEntities = {
	Foo: Foo
	DeprecatedFoo: DeprecatedFoo
}

export type ContemberClientSchema = {
	entities: ContemberClientEntities
}
"
`;

exports[`generate entities generate one has one deprecated 1`] = `
"
export type JSONPrimitive = string | number | boolean | null
export type JSONValue = JSONPrimitive | JSONObject | JSONArray
export type JSONObject = { readonly [K in string]?: JSONValue }
export type JSONArray = readonly JSONValue[]

export type Foo <OverRelation extends string | never = never> = {
	name: 'Foo'
	unique:
		| Omit<{ id: string}, OverRelation>
		| Omit<{ oneHasOneInverseRel: Bar['unique']}, OverRelation>
	columns: {
		id: string
	}
	hasOne: {
		oneHasOneInverseRel: Bar
	}
	hasMany: {
	}
	hasManyBy: {
	}
}
export type Bar <OverRelation extends string | never = never> = {
	name: 'Bar'
	unique:
		| Omit<{ id: string}, OverRelation>
		| Omit<{ oneHasOneOwningRel: Foo['unique']}, OverRelation>
	columns: {
		id: string
	}
	hasOne: {
		oneHasOneOwningRel: Foo
	}
	hasMany: {
	}
	hasManyBy: {
	}
}
export type DeprecatedFoo <OverRelation extends string | never = never> = {
	name: 'DeprecatedFoo'
	unique:
		| Omit<{ id: string}, OverRelation>
		| Omit<{ oneHasOneInverseRel: Bar['unique']}, OverRelation>
	columns: {
		id: string
	}
	hasOne: {
		oneHasOneInverseRel: Bar
	}
	hasMany: {
	}
	hasManyBy: {
	}
}
export type DeprecatedBar <OverRelation extends string | never = never> = {
	name: 'DeprecatedBar'
	unique:
		| Omit<{ id: string}, OverRelation>
		| Omit<{ oneHasOneOwningRel: Foo['unique']}, OverRelation>
	columns: {
		id: string
	}
	hasOne: {
		oneHasOneOwningRel: Foo
	}
	hasMany: {
	}
	hasManyBy: {
	}
}

export type ContemberClientEntities = {
	Foo: Foo
	Bar: Bar
	DeprecatedFoo: DeprecatedFoo
	DeprecatedBar: DeprecatedBar
}

export type ContemberClientSchema = {
	entities: ContemberClientEntities
}
"
`;

exports[`generate entities generate one has many deprecated 1`] = `
"
export type JSONPrimitive = string | number | boolean | null
export type JSONValue = JSONPrimitive | JSONObject | JSONArray
export type JSONObject = { readonly [K in string]?: JSONValue }
export type JSONArray = readonly JSONValue[]

export type Foo <OverRelation extends string | never = never> = {
	name: 'Foo'
	unique:
		| Omit<{ id: string}, OverRelation>
		| Omit<{ oneHasManyRel: Bar['unique']}, OverRelation>
	columns: {
		id: string
	}
	hasOne: {
	}
	hasMany: {
		oneHasManyRel: Bar<'manyHasOneRel'>
	}
	hasManyBy: {
	}
}
export type Bar <OverRelation extends string | never = never> = {
	name: 'Bar'
	unique:
		| Omit<{ id: string}, OverRelation>
	columns: {
		id: string
	}
	hasOne: {
		manyHasOneRel: Foo
	}
	hasMany: {
	}
	hasManyBy: {
	}
}
export type DeprecatedFoo <OverRelation extends string | never = never> = {
	name: 'DeprecatedFoo'
	unique:
		| Omit<{ id: string}, OverRelation>
		| Omit<{ oneHasManyRel: Bar['unique']}, OverRelation>
	columns: {
		id: string
	}
	hasOne: {
	}
	hasMany: {
		oneHasManyRel: Bar<'manyHasOneRel'>
	}
	hasManyBy: {
	}
}
export type DeprecatedBar <OverRelation extends string | never = never> = {
	name: 'DeprecatedBar'
	unique:
		| Omit<{ id: string}, OverRelation>
	columns: {
		id: string
	}
	hasOne: {
		manyHasOneRel: Foo
	}
	hasMany: {
	}
	hasManyBy: {
	}
}

export type ContemberClientEntities = {
	Foo: Foo
	Bar: Bar
	DeprecatedFoo: DeprecatedFoo
	DeprecatedBar: DeprecatedBar
}

export type ContemberClientSchema = {
	entities: ContemberClientEntities
}
"
`;

exports[`generate entities generate many has many deprecated 1`] = `
"
export type JSONPrimitive = string | number | boolean | null
export type JSONValue = JSONPrimitive | JSONObject | JSONArray
export type JSONObject = { readonly [K in string]?: JSONValue }
export type JSONArray = readonly JSONValue[]

export type Foo <OverRelation extends string | never = never> = {
	name: 'Foo'
	unique:
		| Omit<{ id: string}, OverRelation>
	columns: {
		id: string
	}
	hasOne: {
	}
	hasMany: {
		manyHasManyRel: Bar
	}
	hasManyBy: {
	}
}
export type Bar <OverRelation extends string | never = never> = {
	name: 'Bar'
	unique:
		| Omit<{ id: string}, OverRelation>
	columns: {
		id: string
	}
	hasOne: {
	}
	hasMany: {
		manyHasManyInverseRel: Foo
	}
	hasManyBy: {
	}
}
export type DeprecatedFoo <OverRelation extends string | never = never> = {
	name: 'DeprecatedFoo'
	unique:
		| Omit<{ id: string}, OverRelation>
	columns: {
		id: string
	}
	hasOne: {
	}
	hasMany: {
		manyHasManyRel: Bar
	}
	hasManyBy: {
	}
}
export type DeprecatedBar <OverRelation extends string | never = never> = {
	name: 'DeprecatedBar'
	unique:
		| Omit<{ id: string}, OverRelation>
	columns: {
		id: string
	}
	hasOne: {
	}
	hasMany: {
		manyHasManyInverseRel: Foo
	}
	hasManyBy: {
	}
}

export type ContemberClientEntities = {
	Foo: Foo
	Bar: Bar
	DeprecatedFoo: DeprecatedFoo
	DeprecatedBar: DeprecatedBar
}

export type ContemberClientSchema = {
	entities: ContemberClientEntities
}
"
`;

exports[`generate entities generate reduced has by deprecated 1`] = `
"
export type JSONPrimitive = string | number | boolean | null
export type JSONValue = JSONPrimitive | JSONObject | JSONArray
export type JSONObject = { readonly [K in string]?: JSONValue }
export type JSONArray = readonly JSONValue[]

export type Foo <OverRelation extends string | never = never> = {
	name: 'Foo'
	unique:
		| Omit<{ id: string}, OverRelation>
		| Omit<{ locales: FooLocale['unique']}, OverRelation>
	columns: {
		id: string
	}
	hasOne: {
	}
	hasMany: {
		locales: FooLocale<'foo'>
	}
	hasManyBy: {
		localesByLocale: { entity: FooLocale; by: {locale: string}  }
	}
}
export type FooLocale <OverRelation extends string | never = never> = {
	name: 'FooLocale'
	unique:
		| Omit<{ id: string}, OverRelation>
		| Omit<{ locale: string; foo: Foo['unique']}, OverRelation>
	columns: {
		id: string
		locale: string
	}
	hasOne: {
		foo: Foo
	}
	hasMany: {
	}
	hasManyBy: {
	}
}
export type DeprecatedFoo <OverRelation extends string | never = never> = {
	name: 'DeprecatedFoo'
	unique:
		| Omit<{ id: string}, OverRelation>
		| Omit<{ locales: FooLocale['unique']}, OverRelation>
	columns: {
		id: string
	}
	hasOne: {
	}
	hasMany: {
		locales: FooLocale<'foo'>
	}
	hasManyBy: {
		localesByLocale: { entity: FooLocale; by: {locale: string}  }
	}
}
export type DeprecatedFooLocale <OverRelation extends string | never = never> = {
	name: 'DeprecatedFooLocale'
	unique:
		| Omit<{ id: string}, OverRelation>
		| Omit<{ locale: string; foo: Foo['unique']}, OverRelation>
	columns: {
		id: string
		locale: string
	}
	hasOne: {
		foo: Foo
	}
	hasMany: {
	}
	hasManyBy: {
	}
}

export type ContemberClientEntities = {
	Foo: Foo
	FooLocale: FooLocale
	DeprecatedFoo: DeprecatedFoo
	DeprecatedFooLocale: DeprecatedFooLocale
}

export type ContemberClientSchema = {
	entities: ContemberClientEntities
}
"
`;
